# implang

./: .clangd  .gitignore  CMakeLists.txt  README.md  implang  main.cpp
codegen/: CMakeLists.txt  closure.cpp  codegen.cpp  codegen.h
examples/: test.sh  test00.txt  test01.txt
examples/runtime/: runtime.c  runtime.cpp
examples/src/: test02.txt  test03.txt  test04.txt
language/: CMakeLists.txt  debug.cpp  inference.cpp  language.h
notes/: Lvalues (GNU C Language Manual).html  todo.md
parsing/: CMakeLists.txt  lexer.cpp  parser.cpp  parsing.h
